--- a/index.html
+++ b/index.html
@@ -336,9 +336,10 @@
       <div class="sidebar">
         <div class="avatar">
           <img
-            src="https://lh3.googleusercontent.com/k33GFu5Bt8jDqXaUi8-CUEnm1LMz8wW1CQZPd94LNtlWxQeNWU-QAhNu80B9GhUq0n8hs4KRM_QsG7Hb47swqmiGtr4wOSj7koq5tW9fF9umDksD9V2FP-DDRJd05W6z_7rUWQwc0hqUtDlLErE8C8ta-dQtMmDmgBCNoLsOt-NisvsJK6ZlBpC3jAxS1FMfNT8Cb9Hx2QiR6yOdX6Jy_Vo_IHJlZOTTVyxS_tmHes7iTP652LlIQRo-bqgf7GP-1CPq9hJWn4z3QGf92hgMXBmfrOl0PSnGqscPW3sqnb5jup2A_UVmD4EbCYPw7tg9TawynTBlbVfgybtlqGY9QpjSlgi_Mk6fkB3dUORk_NlUowi6XMaOPEJBIN1eYNGR7SSa8A6hrqQXTvWtJyKMJbfejIWkjnUM6WCOI9foltrtwowrq8wRSQNVyX6pJ90a1JOl2qW9TKdEZTgA_KXciXPIzwgT-xIlMNrn8ew-77MVhhySRo3EpojkrYMXCs_H7-6weV8OZkZZLuz1svOIT_IR0MR90-S7RtOIY97fS5w4vDLcBYw4u8MnswYPRfXBGUXqJytNcTQ3B48X-hMjwIWCd-Ua6VwqjYSzvRNPTqH_TsxeEtD3YbGSPiEEh9Wre2EdcttDpEU7Q7mJoyW-YBqTwl-gSeq8qMNhGeS5DKd4Rnc6uZH5jOrnlhdEvjeOicoTK1pzpGPNrxreCMMGMEk=w1301-h1276-no?authuser=0"
+            src="https://scontent.fhan5-3.fna.fbcdn.net/v/t1.6435-9/117445346_3117740305011471_977666703527878310_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=HdaQrqT7bvIAX_zsPYq&_nc_ht=scontent.fhan5-3.fna&oh=00_AT8c2i-kpQ_O_6Iaeim-W3X7cp0qKv1GH7zVRDZWrkGu2A&oe=6254DBFC"
             width="215"
             height="215"
+            style="object-fit: cover"
             alt="Nguyễn Thạc Hưng"
           />
           <h1 class="name">NGUYỄN THẠC HƯNG</h1>
