--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
         padding: 0 45px;
         margin-top: 50px;
       }
+
+      .sidebar .module .div {
+      }
+
       .sidebar .module:last-child {
         margin-bottom: 50px;
       }
@@ -236,8 +240,8 @@
         align-items: center;
         margin-bottom: 20px;
       }
+
       .module__meta {
-        font-size: 14px;
         color: #90a4ae;
         margin-bottom: 20px;
       }
@@ -353,6 +357,8 @@
             <span>ABOUT ME</span>
           </h3>
           <div class="module__content">
+            <p>Tôi tốt nghiệp trường Cao đẳng y tế Hà Nội và sau 1 thời gian làm việc với vị trí kỹ thuật viên Xét Nghiệm, 
+              tôi quyết định thử thách bản thân với một ngành mới và đó là trình.</p>
             <p>
               Tôi được đánh giá là một người thành thật, vui vẻ, hòa đồng, nhiệt
               tình, năng động và có trách nhiệm trong công việc.
@@ -473,38 +479,92 @@
         <div class="section">
           <h2 class="section__title">
             <i class="fa fa-briefcase circle circle--large"></i>
-            <span>Work Experience</span>
+            <span>Kinh nghiệm làm việc</span>
           </h2>
           <div class="section__content">
             <div class="module">
-              <h3 class="module__title">Learn Mern Stack</h3>
+              <h3 class="module__title">Học lập trình</h3>
               <div class="module__meta">
-                <span><i class="fa fa-building-o"></i>Nodemy Company</span>
-                <span
-                  ><i class="fa fa-calendar"></i> January/2021 - June/2021
+                <a
+                  href="https://www.nodemy.vn/"
+                  target="_blank"
+                  style="color: #263238"
+                >
+                  <span><i class="fa fa-building-o"></i>Nodemy Company</span>
+                </a>
+                <span><i class="fa fa-calendar"></i> 01/2021 - 06/2021 </span>
+              </div>
+            </div>
+            <div class="module">
+              <h3 class="module__title">Lập trình viên</h3>
+              <div class="module__meta">
+                <a
+                  href="https://lienviettech.com.vn/"
+                  target="_blank"
+                  style="color: #263238"
+                >
+                  <span
+                    ><i class="fa fa-building-o"></i>Lien Viet Technology</span
+                  >
+                </a>
+                <span><i class="fa fa-calendar"></i> 08/2021 - 03/2022 </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="section">
+          <h2 class="section__title">
+            <i class="fa fa-briefcase circle circle--large"></i>
+            <span>Các dự án tôi đã tham gia</span>
+          </h2>
+          <div class="section__content">
+            <div class="module">
+              <h3 class="module__title">Gaia</h3>
+              <div>
+                <h4 style="display: inline-block">Mô tả dự án:</h4>
+                <span style="margin-left: 12px">
+                  Website giới thiệu các giải pháp và tính năng mà Công ty đang
+                  triển khai tới tay khách hàng.
                 </span>
+                <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> HTML/CSS - mô hình MVC</span></span>
               </div>
+              <h4>Vai trò trong dự án:</h4>
+              <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+              <p style="margin-left: 12px">- Fix bug.</p>
             </div>
+          </div>
+          <div class="section__content">
             <div class="module">
-              <h3 class="module__title">Developer</h3>
-              <div class="module__meta">
-                <span
-                  ><i class="fa fa-building-o"></i>Lien Viet Technology</span
-                >
-                <span
-                  ><i class="fa fa-calendar"></i> June/2021 - March/2022</span
-                >
+              <h3 class="module__title">Video call - Ekyc</h3>
+              <div>
+                <h4 style="display: inline-block">Mô tả dự án:</h4>
+                <span style="margin-left: 12px">
+                  Dự án đàm thoại với khách hàng nhằm phục vụ công tác xác thực
+                  người dùng.
+                </span>
+                <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> ReactJS</span></span>
               </div>
+              </div>
+              <h4>Vai trò trong dự án:</h4>
+              <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+              <p style="margin-left: 12px">- Fix bug.</p>
             </div>
+          </div>
+
+          <div class="section__content">
             <div class="module">
-              <h3 class="module__title">My Skills:</h3>
-              <div class="module__content">
-                <h4>Front-end:</h4>
-                <p>
-                  HTML, CSS, RESPONSIVE, JAVASCRIPT, TYPESCRIPT, REACTJS, REDUX,
-                  ANGULAR, RXJS, NGRX, VUE, VUE X, VUE ROUTER...
-                </p>
+              <h3 class="module__title">Olympus Agent</h3>
+              <div>
+                <h4 style="display: inline-block">Mô tả dự án:</h4>
+                <span style="margin-left: 12px">
+                  Dự án quản lý khách hàng cá nhân, doanh nghiệp đã và đang xử
+                  dụng các tiện ích của Ngân hàng.
+                </span>
+                <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> Angular</span></span>
               </div>
+              <h4>Vai trò trong dự án:</h4>
+              <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+              <p style="margin-left: 12px">- Fix bug.</p>
             </div>
           </div>
         </div>
