--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           </h3>
           <div class="module__content">
             <p>Tôi tốt nghiệp trường Cao đẳng y tế Hà Nội và sau 1 thời gian làm việc với vị trí kỹ thuật viên Xét Nghiệm, 
-              tôi quyết định thử thách bản thân với một ngành mới và đó là trình.</p>
+              tôi quyết định thử thách bản thân với một ngành mới và đó là lập trình.</p>
             <p>
               Tôi được đánh giá là một người thành thật, vui vẻ, hòa đồng, nhiệt
               tình, năng động và có trách nhiệm trong công việc.
@@ -508,6 +508,7 @@
                   >
                 </a>
                 <span><i class="fa fa-calendar"></i> 08/2021 - 03/2022 </span>
+                <p style="margin-left: 12px">Công ty cung cấp các giải pháp phần mềm trong lĩnh vực Fintech</p>
               </div>
             </div>
           </div>
@@ -557,7 +558,7 @@
               <div>
                 <h4 style="display: inline-block">Mô tả dự án:</h4>
                 <span style="margin-left: 12px">
-                  Dự án quản lý khách hàng cá nhân, doanh nghiệp đã và đang xử
+                  Dự án quản lý khách hàng cá nhân, doanh nghiệp đã và đang sử
                   dụng các tiện ích của Ngân hàng.
                 </span>
                 <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> Angular</span></span>
