--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       <div class="sidebar">
         <div class="avatar">
           <img
-            src="https://scontent.fhan5-3.fna.fbcdn.net/v/t1.6435-9/117445346_3117740305011471_977666703527878310_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=HdaQrqT7bvIAX_zsPYq&_nc_ht=scontent.fhan5-3.fna&oh=00_AT8c2i-kpQ_O_6Iaeim-W3X7cp0qKv1GH7zVRDZWrkGu2A&oe=6254DBFC"
+            src="https://scontent.fhan5-7.fna.fbcdn.net/v/t1.6435-9/85006706_2659658280819678_8819660409704284160_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=174925&_nc_ohc=yT3ExsDIhswAX8DLjxt&tn=BlXcNJCiag1FYl-u&_nc_ht=scontent.fhan5-7.fna&oh=00_AT_qPjXrejCs1fUPAiTAtSBoNL-P1jC2Pcmd0sqW4MJHvg&oe=62E5A77E"
             width="215"
             height="215"
             style="object-fit: cover"
@@ -348,13 +348,13 @@
           />
           <h1 class="name">NGUYỄN THẠC HƯNG</h1>
           <h3 class="name">19/04/1996</h3>
-          <h4 class="job">APPLY Frontend</h4>
+          <h4 class="job">APPLY Frontend Angular</h4>
         </div>
         <!-- .avatar -->
         <div class="module">
           <h3 class="module__title">
             <i class="fa fa-user circle circle--medium"></i>
-            <span>ABOUT ME</span>
+            <span>Về bản thân:</span>
           </h3>
           <div class="module__content">
             <p>Tôi tốt nghiệp trường Cao đẳng y tế Hà Nội và sau 1 thời gian làm việc với vị trí kỹ thuật viên Xét Nghiệm, 
@@ -375,7 +375,7 @@
         <div class="module">
           <h3 class="module__title">
             <i class="fas fa-address-book circle circle--medium"></i>
-            <span>Contact Me</span>
+            <span>Liên hệ:</span>
           </h3>
           <div class="module__content">
             <ul>
@@ -421,7 +421,7 @@
         <div class="module module--progress">
           <h3 class="module__title">
             <i class="fa fa-graduation-cap circle circle--medium"></i>
-            <span>My Skills</span>
+            <span>Kỹ năng:</span>
           </h3>
           <div class="module__content">
             <ul>
@@ -510,6 +510,19 @@
                 <span><i class="fa fa-calendar"></i> 08/2021 - 03/2022 </span>
                 <p style="margin-left: 12px">Công ty cung cấp các giải pháp phần mềm trong lĩnh vực Fintech</p>
               </div>
+              <div class="module__meta">
+                <a
+                  href="https://lienviettech.com.vn/"
+                  target="_blank"
+                  style="color: #263238"
+                >
+                  <span
+                    ><i class="fa fa-building-o"></i>Monex.vn</span
+                  >
+                </a>
+                <span><i class="fa fa-calendar"></i> 03/2022 - 06/2022 </span>
+                <p style="margin-left: 12px">Công ty cung cấp các giải pháp phần mềm trong lĩnh vực Fintech</p>
+              </div>
             </div>
           </div>
         </div>
@@ -527,11 +540,12 @@
                   Website giới thiệu các giải pháp và tính năng mà Công ty đang
                   triển khai tới tay khách hàng.
                 </span>
-                <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> HTML/CSS - mô hình MVC</span></span>
+                <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> HTML/CSS/JS - MVC</span></span>
               </div>
               <h4>Vai trò trong dự án:</h4>
               <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
               <p style="margin-left: 12px">- Fix bug.</p>
+              <p style="margin-left: 12px">- ....</p>
             </div>
           </div>
           <div class="section__content">
@@ -549,23 +563,69 @@
               <h4>Vai trò trong dự án:</h4>
               <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
               <p style="margin-left: 12px">- Fix bug.</p>
+              <p style="margin-left: 12px">- ....</p>
             </div>
-          </div>
-
-          <div class="section__content">
-            <div class="module">
-              <h3 class="module__title">Olympus Agent</h3>
-              <div>
-                <h4 style="display: inline-block">Mô tả dự án:</h4>
-                <span style="margin-left: 12px">
-                  Dự án quản lý khách hàng cá nhân, doanh nghiệp đã và đang sử
-                  dụng các tiện ích của Ngân hàng.
-                </span>
-                <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> Angular</span></span>
+            <div class="section__content">
+              <div class="module">
+                <h3 class="module__title">Olympus Agent</h3>
+                <div>
+                  <h4 style="display: inline-block">Mô tả dự án:</h4>
+                  <span style="margin-left: 12px">
+                    Dự án quản lý khách hàng cá nhân, doanh nghiệp đã và đang sử
+                    dụng các tiện ích của Ngân hàng.
+                  </span>
+                  <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> Angular</span></span>
+                </div>
+                <h4>Vai trò trong dự án:</h4>
+                <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+                <p style="margin-left: 12px">- Xử lý Request trong interceptor.</p>
+                <p style="margin-left: 12px">- State management với Ngrx.</p>
+                <p style="margin-left: 12px">- Lấy ra state từ store, xử lý và cập nhân giao diện</p>
+                <p style="margin-left: 12px">- Language translate i18n.</p>
+                <p style="margin-left: 12px">- Viết các directives, pipes, validators.</p>
+                <p style="margin-left: 12px">- Thực hiện call API, xử lý respones với rxjs, đổ data lên UI</p>
+                <p style="margin-left: 12px">- Fix bug.</p>
+                <p style="margin-left: 12px">- ....</p>
               </div>
-              <h4>Vai trò trong dự án:</h4>
-              <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
-              <p style="margin-left: 12px">- Fix bug.</p>
+            </div>
+            <div class="section__content">
+              <div class="module">
+                <h3 class="module__title">Monex operator</h3>
+                <div>
+                  <h4 style="display: inline-block">Mô tả dự án:</h4>
+                  <span style="margin-left: 12px">
+                    Dự án cung cấp các giải pháp thanh toán bằng thẻ tín dụng, mua trước trả sau
+                  </span>
+                  <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> Angular</span></span>
+                </div>
+                <h4>Vai trò trong dự án:</h4>
+                <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+                <p style="margin-left: 12px">- Xử lý Request trong interceptor.</p>
+                <p style="margin-left: 12px">- State management với Ngrx.</p>
+                <p style="margin-left: 12px">- Lấy ra state từ store, xử lý và cập nhân giao diện</p>
+                <p style="margin-left: 12px">- Language translate i18n.</p>
+                <p style="margin-left: 12px">- Viết các directives, pipes, validators.</p>
+                <p style="margin-left: 12px">- Thực hiện call API, xử lý respones với rxjs, đổ data lên UI</p>
+                <p style="margin-left: 12px">- Fix bug.</p>
+                <p style="margin-left: 12px">- ....</p>
+              </div>
+            </div>
+            <div class="section__content">
+              <div class="module">
+                <h3 class="module__title">Monex.vn</h3>
+                <div>
+                  <h4 style="display: inline-block">Mô tả dự án:</h4>
+                  <span style="margin-left: 12px">
+                    Website giới thiệu các giải pháp và tính năng mà Công ty đang
+                    triển khai tới tay khách hàng.
+                  </span>
+                  <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> HTML/CSS/JS - webpack</span></span>
+                </div>
+                <h4>Vai trò trong dự án:</h4>
+                <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+                <p style="margin-left: 12px">- Fix bug.</p>
+                <p style="margin-left: 12px">- ....</p>
+              </div>
             </div>
           </div>
         </div>
