--- a/index.html
+++ b/index.html
@@ -357,8 +357,11 @@
             <span>Về bản thân:</span>
           </h3>
           <div class="module__content">
-            <p>Tôi tốt nghiệp trường Cao đẳng y tế Hà Nội và sau 1 thời gian làm việc với vị trí kỹ thuật viên Xét Nghiệm, 
-              tôi quyết định thử thách bản thân với một ngành mới và đó là lập trình.</p>
+            <p>
+              Tôi tốt nghiệp trường Cao đẳng y tế Hà Nội và sau 1 thời gian làm
+              việc với vị trí kỹ thuật viên Xét Nghiệm, tôi quyết định thử thách
+              bản thân với một ngành mới và đó là lập trình.
+            </p>
             <p>
               Tôi được đánh giá là một người thành thật, vui vẻ, hòa đồng, nhiệt
               tình, năng động và có trách nhiệm trong công việc.
@@ -508,7 +511,9 @@
                   >
                 </a>
                 <span><i class="fa fa-calendar"></i> 08/2021 - 03/2022 </span>
-                <p style="margin-left: 12px">Công ty cung cấp các giải pháp phần mềm trong lĩnh vực Fintech</p>
+                <p style="margin-left: 12px">
+                  Công ty cung cấp các giải pháp phần mềm trong lĩnh vực Fintech
+                </p>
               </div>
               <div class="module__meta">
                 <a
@@ -516,12 +521,12 @@
                   target="_blank"
                   style="color: #263238"
                 >
-                  <span
-                    ><i class="fa fa-building-o"></i>Monex.vn</span
-                  >
+                  <span><i class="fa fa-building-o"></i>Monex.vn</span>
                 </a>
                 <span><i class="fa fa-calendar"></i> 03/2022 - 06/2022 </span>
-                <p style="margin-left: 12px">Công ty cung cấp các giải pháp phần mềm trong lĩnh vực Fintech</p>
+                <p style="margin-left: 12px">
+                  Công ty cung cấp các giải pháp phần mềm trong lĩnh vực Fintech
+                </p>
               </div>
             </div>
           </div>
@@ -529,7 +534,7 @@
         <div class="section">
           <h2 class="section__title">
             <i class="fa fa-briefcase circle circle--large"></i>
-            <span>Các dự án tôi đã tham gia</span>
+            <span>Các dự án đã tham gia</span>
           </h2>
           <div class="section__content">
             <div class="module">
@@ -540,7 +545,11 @@
                   Website giới thiệu các giải pháp và tính năng mà Công ty đang
                   triển khai tới tay khách hàng.
                 </span>
-                <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> HTML/CSS/JS - MVC</span></span>
+                <span style="display: block"
+                  >Công nghệ xử dụng:<span style="font-weight: bold">
+                    HTML/CSS/JS - MVC</span
+                  ></span
+                >
               </div>
               <h4>Vai trò trong dự án:</h4>
               <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
@@ -554,78 +563,116 @@
               <div>
                 <h4 style="display: inline-block">Mô tả dự án:</h4>
                 <span style="margin-left: 12px">
-                  Dự án đàm thoại với khách hàng nhằm phục vụ công tác xác thực
-                  người dùng.
+                  Dự án đàm thoại với khách hàng nhằm phục vụ xác thực người
+                  dùng.
                 </span>
-                <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> ReactJS</span></span>
+                <span style="display: block"
+                  >Công nghệ xử dụng:<span style="font-weight: bold">
+                    ReactJS</span
+                  ></span
+                >
               </div>
+            </div>
+            <h4>Vai trò trong dự án:</h4>
+            <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+            <p style="margin-left: 12px">- Fix bug.</p>
+            <p style="margin-left: 12px">- ....</p>
+          </div>
+          <div class="section__content">
+            <div class="module">
+              <h3 class="module__title">Olympus Agent</h3>
+              <div>
+                <h4 style="display: inline-block">Mô tả dự án:</h4>
+                <span style="margin-left: 12px">
+                  Dự án quản lý khách hàng cá nhân, doanh nghiệp đã và đang sử
+                  dụng các tiện ích của Ngân hàng.
+                </span>
+                <span style="display: block"
+                  >Công nghệ xử dụng:<span style="font-weight: bold">
+                    Angular</span
+                  ></span
+                >
+              </div>
+              <h4>Vai trò trong dự án:</h4>
+              <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+              <p style="margin-left: 12px">
+                - Xử lý Request và httpResponseError trong interceptor.
+              </p>
+              <p style="margin-left: 12px">- State management với Ngrx.</p>
+              <p style="margin-left: 12px">
+                - Lấy ra state từ store, xử lý và cập nhật giao diện
+              </p>
+              <p style="margin-left: 12px">- Language translate i18n.</p>
+              <p style="margin-left: 12px">
+                - Viết directives, pipes.
+              </p>
+              <p style="margin-left: 12px">
+                - Xây dụng form, validate filed.
+              </p>
+              <p style="margin-left: 12px">
+                - Thực hiện call API, xử lý respones với rxjs, đổ data lên UI
+              </p>
+              <p style="margin-left: 12px">- Fix bug.</p>
+              <p style="margin-left: 12px">- ....</p>
+            </div>
+          </div>
+          <div class="section__content">
+            <div class="module">
+              <h3 class="module__title">Monex operator</h3>
+              <div>
+                <h4 style="display: inline-block">Mô tả dự án:</h4>
+                <span style="margin-left: 12px">
+                  Dự án cung cấp các giải pháp thanh toán bằng thẻ tín dụng, mua
+                  trước trả sau
+                </span>
+                <span style="display: block"
+                  >Công nghệ xử dụng:<span style="font-weight: bold">
+                    Angular</span
+                  ></span
+                >
+              </div>
+              <h4>Vai trò trong dự án:</h4>
+              <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+              <p style="margin-left: 12px">
+                - Xử lý Request và httpResponseError trong interceptor.
+              </p>
+              <p style="margin-left: 12px">- State management với Ngrx.</p>
+              <p style="margin-left: 12px">
+                - Lấy ra state từ store, xử lý và cập nhật giao diện
+              </p>
+              <p style="margin-left: 12px">- Language translate i18n.</p>
+              <p style="margin-left: 12px">
+                - Viết directives, pipes.
+              </p>
+              <p style="margin-left: 12px">
+                - Xây dụng form, validate filed.
+              </p>
+              <p style="margin-left: 12px">
+                - Thực hiện call API, xử lý respones với rxjs, đổ data lên UI
+              </p>
+              <p style="margin-left: 12px">- Fix bug.</p>
+              <p style="margin-left: 12px">- ....</p>
+            </div>
+          </div>
+          <div class="section__content">
+            <div class="module">
+              <h3 class="module__title">Monex.vn</h3>
+              <div>
+                <h4 style="display: inline-block">Mô tả dự án:</h4>
+                <span style="margin-left: 12px">
+                  Website giới thiệu các giải pháp và tính năng mà Công ty đang
+                  triển khai tới tay khách hàng.
+                </span>
+                <span style="display: block"
+                  >Công nghệ xử dụng:<span style="font-weight: bold">
+                    HTML/CSS/JS - webpack</span
+                  ></span
+                >
               </div>
               <h4>Vai trò trong dự án:</h4>
               <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
               <p style="margin-left: 12px">- Fix bug.</p>
               <p style="margin-left: 12px">- ....</p>
-            </div>
-            <div class="section__content">
-              <div class="module">
-                <h3 class="module__title">Olympus Agent</h3>
-                <div>
-                  <h4 style="display: inline-block">Mô tả dự án:</h4>
-                  <span style="margin-left: 12px">
-                    Dự án quản lý khách hàng cá nhân, doanh nghiệp đã và đang sử
-                    dụng các tiện ích của Ngân hàng.
-                  </span>
-                  <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> Angular</span></span>
-                </div>
-                <h4>Vai trò trong dự án:</h4>
-                <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
-                <p style="margin-left: 12px">- Xử lý Request trong interceptor.</p>
-                <p style="margin-left: 12px">- State management với Ngrx.</p>
-                <p style="margin-left: 12px">- Lấy ra state từ store, xử lý và cập nhân giao diện</p>
-                <p style="margin-left: 12px">- Language translate i18n.</p>
-                <p style="margin-left: 12px">- Viết các directives, pipes, validators.</p>
-                <p style="margin-left: 12px">- Thực hiện call API, xử lý respones với rxjs, đổ data lên UI</p>
-                <p style="margin-left: 12px">- Fix bug.</p>
-                <p style="margin-left: 12px">- ....</p>
-              </div>
-            </div>
-            <div class="section__content">
-              <div class="module">
-                <h3 class="module__title">Monex operator</h3>
-                <div>
-                  <h4 style="display: inline-block">Mô tả dự án:</h4>
-                  <span style="margin-left: 12px">
-                    Dự án cung cấp các giải pháp thanh toán bằng thẻ tín dụng, mua trước trả sau
-                  </span>
-                  <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> Angular</span></span>
-                </div>
-                <h4>Vai trò trong dự án:</h4>
-                <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
-                <p style="margin-left: 12px">- Xử lý Request trong interceptor.</p>
-                <p style="margin-left: 12px">- State management với Ngrx.</p>
-                <p style="margin-left: 12px">- Lấy ra state từ store, xử lý và cập nhân giao diện</p>
-                <p style="margin-left: 12px">- Language translate i18n.</p>
-                <p style="margin-left: 12px">- Viết các directives, pipes, validators.</p>
-                <p style="margin-left: 12px">- Thực hiện call API, xử lý respones với rxjs, đổ data lên UI</p>
-                <p style="margin-left: 12px">- Fix bug.</p>
-                <p style="margin-left: 12px">- ....</p>
-              </div>
-            </div>
-            <div class="section__content">
-              <div class="module">
-                <h3 class="module__title">Monex.vn</h3>
-                <div>
-                  <h4 style="display: inline-block">Mô tả dự án:</h4>
-                  <span style="margin-left: 12px">
-                    Website giới thiệu các giải pháp và tính năng mà Công ty đang
-                    triển khai tới tay khách hàng.
-                  </span>
-                  <span style="display: block;">Công nghệ xử dụng:<span style="font-weight: bold;"> HTML/CSS/JS - webpack</span></span>
-                </div>
-                <h4>Vai trò trong dự án:</h4>
-                <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
-                <p style="margin-left: 12px">- Fix bug.</p>
-                <p style="margin-left: 12px">- ....</p>
-              </div>
             </div>
           </div>
         </div>
