--- a/index.html
+++ b/index.html
@@ -449,13 +449,16 @@
               <li class="flex">
                 <i class="fa fa-globe circle circle--small circle--white"></i>
                 <div class="flex--1">
-                  <span>Angular / Rxjs / Ngrx</span>
+                  <span
+                    >Angular / Rxjs / Ngrx / Dependence Injection /
+                    ChangeDetection</span
+                  >
                 </div>
               </li>
               <li class="flex">
                 <i class="fab fa-chrome circle circle--small circle--white"></i>
                 <div class="flex--1">
-                  <span>Vue / VueX / Veu router</span>
+                  <span>Vue / VueX / Veu Router</span>
                 </div>
               </li>
               <li class="flex">
@@ -468,6 +471,12 @@
                 <i class="fab fa-github circle circle--small circle--white"></i>
                 <div class="flex--1">
                   <span>GitHub / GitLab</span>
+                </div>
+              </li>
+              <li class="flex">
+                <i class="fab fa-python circle circle--small circle--white"></i>
+                <div class="flex--1">
+                  <span>Python (learning) </span>
                 </div>
               </li>
             </ul>
@@ -536,6 +545,7 @@
             <i class="fa fa-briefcase circle circle--large"></i>
             <span>Các dự án đã tham gia</span>
           </h2>
+          <!-- Gaia -->
           <div class="section__content">
             <div class="module">
               <h3 class="module__title">Gaia</h3>
@@ -550,13 +560,22 @@
                     HTML/CSS/JS - MVC</span
                   ></span
                 >
+                <span style="display: block"
+                  >Số người tham gia:<span style="font-weight: bold"
+                    > 2</span
+                  ></span
+                >
               </div>
+              <p></p>
               <h4>Vai trò trong dự án:</h4>
-              <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+              <p style="margin-left: 12px">- NodeJS, ExpressJS, HandleBars, MongoDB</p>
+              <p style="margin-left: 12px">- Build UI/UX.</p>
               <p style="margin-left: 12px">- Fix bug.</p>
               <p style="margin-left: 12px">- ....</p>
             </div>
           </div>
+
+          <!-- video call  -->
           <div class="section__content">
             <div class="module">
               <h3 class="module__title">Video call - Ekyc</h3>
@@ -571,13 +590,27 @@
                     ReactJS</span
                   ></span
                 >
+                <span style="display: block"
+                  >Số người tham gia:<span style="font-weight: bold">
+                    2</span
+                  ></span
+                >
               </div>
             </div>
+            <p></p>
             <h4>Vai trò trong dự án:</h4>
             <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
             <p style="margin-left: 12px">- Fix bug.</p>
-            <p style="margin-left: 12px">- ....</p>
+            <p style="margin-left: 12px">
+              - State management với redex toolkit.
+            </p>
+            <p style="margin-left: 12px">
+              - Handle request trong axios interceptor.
+            </p>
+            <p style="margin-left: 12px">- ...</p>
           </div>
+
+          <!-- Olympus Agent  -->
           <div class="section__content">
             <div class="module">
               <h3 class="module__title">Olympus Agent</h3>
@@ -589,33 +622,40 @@
                 </span>
                 <span style="display: block"
                   >Công nghệ xử dụng:<span style="font-weight: bold">
-                    Angular</span
+                    Angular 12</span
+                  ></span
+                >
+                <span style="display: block"
+                  >Số người tham gia:<span style="font-weight: bold">
+                    3</span
                   ></span
                 >
               </div>
+              <p></p>
               <h4>Vai trò trong dự án:</h4>
-              <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+              <p style="margin-left: 12px">- Build UI/UX.</p>
+              <p style="margin-left: 12px">- Build CoreModule, Base Layout,...</p>
               <p style="margin-left: 12px">
-                - Xử lý Request và httpResponseError trong interceptor.
+                - Handle Request and httpResponseError in HttpInterceptor.
               </p>
-              <p style="margin-left: 12px">- State management với Ngrx.</p>
-              <p style="margin-left: 12px">
-                - Lấy ra state từ store, xử lý và cập nhật giao diện
-              </p>
+              <p style="margin-left: 12px">- State management with Ngrx: ngrx-store, ngrx-effect, ngrx-router, ngrx-component.</p>
+              <p style="margin-left: 12px">- Library Angular Material/ Angular Material CDK</p>
               <p style="margin-left: 12px">- Language translate i18n.</p>
+              <p style="margin-left: 12px">- Change Detection</p>
+              <p style="margin-left: 12px">- Angular Service singleton</p>
+              <p style="margin-left: 12px">- Custom AttributeDirectives, write pipes.</p>
+              <p style="margin-left: 12px">- Build Reactive Form, formControl, custom validators, show error.</p>
+              <p style="margin-left: 12px">- Handle permission.</p>
+              <p style="margin-left: 12px">- Router: Lazyload module, router guards: canActivated, canload, canActivateChild, canDeactivate.</p>
               <p style="margin-left: 12px">
-                - Viết directives, pipes.
-              </p>
-              <p style="margin-left: 12px">
-                - Xây dụng form, validate filed.
-              </p>
-              <p style="margin-left: 12px">
-                - Thực hiện call API, xử lý respones với rxjs, đổ data lên UI
+                - Call API, handle respones, render UI
               </p>
               <p style="margin-left: 12px">- Fix bug.</p>
               <p style="margin-left: 12px">- ....</p>
             </div>
           </div>
+
+          <!-- Monex operator -->
           <div class="section__content">
             <div class="module">
               <h3 class="module__title">Monex operator</h3>
@@ -630,25 +670,30 @@
                     Angular</span
                   ></span
                 >
+                <span style="display: block"
+                  >Số người tham gia:<span style="font-weight: bold">
+                    2</span
+                  ></span
+                >
               </div>
+              <p></p>
               <h4>Vai trò trong dự án:</h4>
-              <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+              <p style="margin-left: 12px">- Build UI/UX.</p>
+              <p style="margin-left: 12px">- Build CoreModule, Base Layout,...</p>
               <p style="margin-left: 12px">
-                - Xử lý Request và httpResponseError trong interceptor.
+                - Handle Request and httpResponseError in HttpInterceptor.
               </p>
-              <p style="margin-left: 12px">- State management với Ngrx.</p>
-              <p style="margin-left: 12px">
-                - Lấy ra state từ store, xử lý và cập nhật giao diện
-              </p>
+              <p style="margin-left: 12px">- State management with Ngrx: ngrx-store, ngrx-effect, ngrx-router, ngrx-component.</p>
+              <p style="margin-left: 12px">- Library Angular Material/ Angular Material CDK</p>
               <p style="margin-left: 12px">- Language translate i18n.</p>
+              <p style="margin-left: 12px">- Change Detection</p>
+              <p style="margin-left: 12px">- Angular Service singleton</p>
+              <p style="margin-left: 12px">- Custom AttributeDirectives, write pipes.</p>
+              <p style="margin-left: 12px">- Build Reactive Form, formControl, custom validators, show error.</p>
+              <p style="margin-left: 12px">- Handle permission.</p>
+              <p style="margin-left: 12px">- Router: Lazyload module, router guards: canActivated, canload, canActivateChild, canDeactivate.</p>
               <p style="margin-left: 12px">
-                - Viết directives, pipes.
-              </p>
-              <p style="margin-left: 12px">
-                - Xây dụng form, validate filed.
-              </p>
-              <p style="margin-left: 12px">
-                - Thực hiện call API, xử lý respones với rxjs, đổ data lên UI
+                - Call API, handle respones, render UI
               </p>
               <p style="margin-left: 12px">- Fix bug.</p>
               <p style="margin-left: 12px">- ....</p>
@@ -668,9 +713,20 @@
                     HTML/CSS/JS - webpack</span
                   ></span
                 >
+                <span style="display: block"
+                  >Số người tham gia:<span style="font-weight: bold">
+                    2</span
+                  ></span
+                >
               </div>
+              <p></p>
               <h4>Vai trò trong dự án:</h4>
-              <p style="margin-left: 12px">- Xây dựng UI/UX.</p>
+              <p style="margin-left: 12px">- Webpack config.</p>
+              <p style="margin-left: 12px">- Webpack loader.</p>
+              <p style="margin-left: 12px">- Webpack plugin.</p>
+              <p style="margin-left: 12px">- Build UI/UX.</p>
+              <p style="margin-left: 12px">- JQuery, bootstrap.</p>
+              <p style="margin-left: 12px">- Build form and validate.</p>
               <p style="margin-left: 12px">- Fix bug.</p>
               <p style="margin-left: 12px">- ....</p>
             </div>
